@@ -23,8 +23,8 @@ var verifyTimer;
 // needed to keep the order
 var hoststatustypes    = new Array( 1, 2, 4, 8 );
 var servicestatustypes = new Array( 1, 2, 4, 8, 16 );
-var hostprops          = new Array( 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144, 524288 );
-var serviceprops       = new Array( 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144, 524288 );
+var hostprops          = new Array( 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144, 524288, 1048576, 2097152, 4194304, 8388608 );
+var serviceprops       = new Array( 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144, 524288, 1048576, 2097152, 4194304, 8388608 );
 
 /*******************************************************************************
   ,ad8888ba,  88888888888 888b      88 88888888888 88888888ba  88   ,ad8888ba,
