@@ -174,6 +174,18 @@
                       <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="524288" id="[% paneprefix %][% prefix %]_hp524288" name="[% paneprefix %][% prefix %]_hostprop"></td>
                       <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_hp524288n" onclick="toggleFilterCheckBox(this.id)">In Soft State</td>
                     </tr>
+                    <tr>
+                      <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_hp1048576n" onclick="toggleFilterCheckBox(this.id)">In Check Period</td>
+                      <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="1048576" id="[% paneprefix %][% prefix %]_hp1048576" name="[% paneprefix %][% prefix %]_hostprop"></td>
+                      <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="2097152" id="[% paneprefix %][% prefix %]_hp2097152" name="[% paneprefix %][% prefix %]_hostprop"></td>
+                      <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_hp2097152n" onclick="toggleFilterCheckBox(this.id)">Outside Check Period</td>
+                    </tr>
+                    <tr>
+                      <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_hp4194304n" onclick="toggleFilterCheckBox(this.id)">In Notification Period</td>
+                      <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="4194304" id="[% paneprefix %][% prefix %]_hp4194304" name="[% paneprefix %][% prefix %]_hostprop"></td>
+                      <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="8388608" id="[% paneprefix %][% prefix %]_hp8388608" name="[% paneprefix %][% prefix %]_hostprop"></td>
+                      <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_hp8388608n" onclick="toggleFilterCheckBox(this.id)">Outside Notification Period</td>
+                    </tr>
                   </table>
                 </td>
               </tr>
@@ -300,6 +312,18 @@
                       <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="262144" id="[% paneprefix %][% prefix %]_sp262144" name="[% paneprefix %][% prefix %]_serviceprop"></td>
                       <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="524288" id="[% paneprefix %][% prefix %]_sp524288" name="[% paneprefix %][% prefix %]_serviceprop"></td>
                       <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_sp524288n" onclick="toggleFilterCheckBox(this.id)">In Soft State</td>
+                    </tr>
+                    <tr>
+                      <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_sp1048576n" onclick="toggleFilterCheckBox(this.id)">In Check Period</td>
+                      <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="1048576" id="[% paneprefix %][% prefix %]_sp1048576" name="[% paneprefix %][% prefix %]_hostprop"></td>
+                      <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="2097152" id="[% paneprefix %][% prefix %]_sp2097152" name="[% paneprefix %][% prefix %]_hostprop"></td>
+                      <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_sp2097152n" onclick="toggleFilterCheckBox(this.id)">Outside Check Period</td>
+                    </tr>
+                    <tr>
+                      <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_sp4194304n" onclick="toggleFilterCheckBox(this.id)">In Notification Period</td>
+                      <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="4194304" id="[% paneprefix %][% prefix %]_sp4194304" name="[% paneprefix %][% prefix %]_hostprop"></td>
+                      <td valign="top" align="left" class='filterValueCheck'><input type="checkbox" value="8388608" id="[% paneprefix %][% prefix %]_sp8388608" name="[% paneprefix %][% prefix %]_hostprop"></td>
+                      <td valign="top" align="left" class='filterName clickable' id="[% paneprefix %][% prefix %]_sp8388608n" onclick="toggleFilterCheckBox(this.id)">Outside Notification Period</td>
                     </tr>
                   </table>
                 </td>
